cmake_minimum_required(VERSION 3.0)
project(main)
add_subdirectory(src)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(${PROJECT_SOURCE_DIR}/lib)

#aux_source_directory(src SRC_LIST)
add_executable(Demo main.cc)
target_link_libraries(Demo add)